chore: add about page
chore: restructured index page
chore: remove package and theme index
chore: add logo

--- a/_pages/assets/css/custom.css
+++ b/_pages/assets/css/custom.css
@@ -276,3 +276,8 @@ a.purple:hover {
 section {
     max-width: 900px !important;
 }
+
+section #title img {
+    max-width: unset !important;
+    padding-bottom: 0 !important;
+}
