--- a/_pages/_layouts/custom.html
+++ b/_pages/_layouts/custom.html
@@ -7,7 +7,8 @@
 
     {% seo %}
     <link rel="stylesheet" href="{{'/assets/css/grid.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="{{'/assets/css/utilities.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet"
+        href="{{'/assets/css/utilities.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="//cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="{{'/assets/css/custom.css?v=' | append: site.github.build_revision | relative_url }}">
@@ -28,26 +29,25 @@
 <body class="{{ page.colorspace }}">
     <div class="wrapper">
         <section class="no-header">
-            <div id="title">
-                {% if page.icon %}
-                <img src="{{ page.icon | relative_url }}" />
-                {% endif %}
-                <h1 class="mb-15">
-                    <a href="{{'/' |relative_url}}">
-                        {{ site.title | default: site.github.repository_name }}
-                    </a>
-                </h1>
-                <hr>
+            <div id="title" style="padding-bottom: 0;">
+                <a href="{{ "/" | relative_url }}">
+                    <img id="logo_full" src="{{ "
+                        //raw.githubusercontent.com/IT-Hock/fpm/main/images/logo_full.svg?v=" | append: site.github.build_revision | relative_url }}"
+                        height="128" />
+                </a>
             </div>
 
             {{ content }}
 
             <div id="footer">
                 <hr />
-                <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{
-                        site.github.owner_name }}</a></span>
-                <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a
-                        href="https://draculatheme.com/">Dracula</a></span>
+                <span class="credits left">
+                    Project Revision: <a href="{{ site.github.repository_url }}/tree/{{ site.github.build_revision }}"
+                        target="_blank" rel="noopener noreferrer">{{ site.github.build_revision }}</a>
+                </span>
+                <span class="credits right">
+                    Hosted on GitHub Pages &mdash; Theme by <a href="https://draculatheme.com/">Dracula</a>
+                </span>
             </div>
         </section>
 
