--- a/_pages/_layouts/custom.html
+++ b/_pages/_layouts/custom.html
@@ -31,8 +31,7 @@
         <section class="no-header">
             <div id="title" style="padding-bottom: 0;">
                 <a href="{{ "/" | relative_url }}">
-                    <img id="logo_full" src="{{ "
-                        //raw.githubusercontent.com/IT-Hock/fpm/main/images/logo_full.svg?v=" | append: site.github.build_revision | relative_url }}"
+                    <img id="logo_full" src="{{ "//raw.githubusercontent.com/IT-Hock/fpm/main/images/logo_full.svg?v=" | append: site.github.build_revision }}"
                         height="128" />
                 </a>
             </div>
