--- a/_pages/assets/css/custom.css
+++ b/_pages/assets/css/custom.css
@@ -191,6 +191,18 @@ input[type=text]:focus-visible {
     margin-bottom: 15px;
 }
 
+.mb-50 {
+    margin-bottom: 50px;
+}
+
+.mt-2 {
+    margin-top: 2px;
+}
+
+.mt-5 {
+    margin-top: 5px;
+}
+
 .dataTables_wrapper .dataTables_paginate .paginate_button.current,
 .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover,
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
@@ -282,4 +294,19 @@ section {
 section #title img {
     max-width: unset !important;
     padding-bottom: 0 !important;
+}
+
+img.hidden-large {
+    display: none;
+    z-index: 1000;
+    padding: 5px;
+    border: 1px solid #44475a;
+    border-radius: 5px;
+    background-color: #282a36;
+    max-width: 600px;
+    max-height: 600px;
+}
+
+img.thumbnail {
+    cursor: pointer;
 }
